@@ -10,7 +10,8 @@ General Changes
  * Added Censor list (applies to all chat message text)
  * Added Auto-Replace list (applies to all outgoing chat message text)
  * Rearranged the Settings tree and removed some descriptive panes
-	 
+ * Added a config option for overriding the default language
+
 Chat
  * Added a completion dropdown list (gtk.EntryCompletion) to chat entries
 
